--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,15 +45,15 @@ path = "src/bin/kalshi_crypto_arb.rs"
 
 [[bin]]
 name = "historical_data"
-path = "src/bin/historical_data.rs"
+path = "src/bin/analysis/historical_data.rs"
 
 [[bin]]
 name = "resolution_analysis"
-path = "src/bin/resolution_analysis.rs"
+path = "src/bin/analysis/resolution_analysis.rs"
 
 [[bin]]
 name = "fair_value"
-path = "src/bin/fair_value.rs"
+path = "src/bin/analysis/fair_value.rs"
 
 [[bin]]
 name = "backtest_pricing"
@@ -65,23 +65,31 @@ path = "src/bin/live_fair_value_tracker.rs"
 
 [[bin]]
 name = "backtest_trades"
-path = "src/bin/backtest_trades.rs"
-
-[[bin]]
-name = "strike_input"
-path = "src/bin/strike_input.rs"
+path = "src/bin/analysis/backtest_trades.rs"
 
 [[bin]]
 name = "atm_sniper"
-path = "src/bin/atm_sniper.rs"
+path = "src/bin/stuff/atm_sniper.rs"
 
 [[bin]]
 name = "poly_sniper"
 path = "src/bin/poly_sniper.rs"
 
 [[bin]]
+name = "poly_ping_pong"
+path = "src/bin/poly_primary/poly_ping_pong.rs"
+
+[[bin]]
 name = "dual_monitor"
 path = "src/bin/dual_monitor.rs"
+
+[[bin]]
+name = "poly_momentum"
+path = "src/bin/poly_primary/poly_momentum.rs"
+
+[[bin]]
+name = "poly_atm_sniper"
+path = "src/bin/poly_primary/poly_atm_sniper.rs"
 
 [profile.release]
 opt-level = 3
